      the revision cache no longer gave any noticeable benefit, so it
      was removed (the files-changed cache is still useful).

    - The templates were rewritten in Zope's TAL markup, powered by
      the simpleTAL library -- improving both the performance and
      memory consumption of rendering by a factor of around 3 for
      large pages over the old Kid templates.

    - Loggerhead's poorly performing text index was disabled.

    - Loggerhead no longer depends on bzrlib functions deprecated in
      Bazaar 1.5 and removed in 1.6 (Martin Albisetti).

    - The daemonization code was made more regular, fixing bugs
      #139161 ("Starting loggerhead process may not close its stdin
      and stdout properly") and #211526 ("Codebrowse log directory has
      unnecessarily permissive permissions")

    - Some confusion about what the 'file_id' query argument means was
      cleared up: filter_file_id now means "filter revisions to those
      that affect this file" in all views and file_id means "examine
      this file/directory" in the annotate and inventory views.

    - Dates are present more compactly.

    - The loggerhead.conf file can specify which network interface to
      bind to (Mattias Eriksson)

1.2.1  [06mar2008]
------------------

    - The changelog view was out of order when not using the revision
      cache.

1.2  [04mar2008]
----------------

    - Michael Hudson <michael.hudson@canonical.com> has mostly taken
      over the maintenance of loggerhead.

    - loggerhead now has a simple test suite -- use 'nosetests' in the
      loggerhead directory to run it.

    - The rendering performance of pages that display large amounts of
      text was improved by a factor of 4 or so.

    - loggerhead no longer caches the text of the diffs between
      revisions.  It rarely helped and wasted a lot of disk space.

    - The layout of most pages was made more "tight" to waste less
      screen real estate, and some other UI improvements (Kent